fixed logic checks